syntax = "proto3";

package consensus;

option go_package = "github.com/meet-modi/Raft/proto/consensus";

message LogEntry {
    uint64 term = 1;
    int64 index = 2;
    string command = 3;
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leader_id = 2;
    int64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    int64 leader_commit=6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidate_id = 2;
    int64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
}

service ConsensusService {
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
}